--- a/hello.html
+++ b/hello.html
@@ -7,8 +7,8 @@
 
     </head>
     <body>
-        <p>hello world</p>
+        <p>hello world!</p>
         <p>another line in the html file</p>
-        <p>another line from github account </p>
+        <p>another line from github account</p>
     </body>
 </html>
