--- a/0_search/index.html
+++ b/0_search/index.html
@@ -7,9 +7,35 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </head>
     <body>
-        <form action="https://google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
-        </form>
+        <div class="container">
+            <div class="row">
+                <div class="d-flex flex-row justify-content-end">
+                    <div class="d-flex flex-column align-items-center"">
+                        <p>
+                            <a href="imageSearch.html">image Search</a>
+                        </p>
+                        <p>
+                            <a href="advancedSearch.html">Advanced Search</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col d-flex flex-column justify-content-center align-items-center">
+                    <h3>Google</h3>
+                    <form action="https://google.com/search">
+                        <div>
+                            <input type="text" name="q">
+                        </div>
+                        <div>
+                            <input type="submit" value="Google Search">
+                            <input type="submit" value="I'm feeling lucky">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
