--- a/0_search/imageSearch.html
+++ b/0_search/imageSearch.html
@@ -11,7 +11,7 @@
                 <div class="d-flex flex-row justify-content-end">
                     <div class="d-flex flex-column align-items-center"">
                         <p>
-                            <a href="imageSearch.html">Image Search</a>
+                            <a href="index.html">Simple Search</a>
                         </p>
                         <p>
                             <a href="advancedSearch.html">Advanced Search</a>
@@ -24,13 +24,12 @@
             <div class="row">
                 <div class="col d-flex flex-column flex-fill">
                     <h1>Google</h1>
-                    <form action="https://google.com/search">
-                        <div class="d-flex justify-content-center">
+                    <form action="https://google.com/images">
+                        <div>
                             <input type="text" name="q"  class="search-engine w-100">
                         </div>
                         <div class="d-flex justify-content-center">
-                            <input type="submit" value="Google Search" class="search-btn">
-                            <input type="submit" name="btnI" value="I'm feeling lucky" class="search-btn">
+                            <input type="submit" value="Google Image Search" class="search-btn">
                         </div>
                     </form>
                 </div>
