--- a/0_search/imageSearch.html
+++ b/0_search/imageSearch.html
@@ -9,8 +9,8 @@
         <div class="container">
             <div class="row">
                 <div class="d-flex flex-row justify-content-end">
-                    <div class="d-flex flex-column align-items-center"">
-                        <p>
+                    <div class="d-flex flex-row"">
+                        <p class="mx-3">
                             <a href="index.html">Simple Search</a>
                         </p>
                         <p>
@@ -23,9 +23,11 @@
         <div class="container">
             <div class="row">
                 <div class="col d-flex flex-column flex-fill">
-                    <h1>Google</h1>
+                    <div class="d-flex justify-content-center">
+                        <img class="google-search-icon"src="./google.png" alt="">
+                    </div>
                     <form action="https://google.com/images">
-                        <div>
+                        <div class="d-flex justify-content-center">
                             <input type="text" name="q"  class="search-engine w-100">
                         </div>
                         <div class="d-flex justify-content-center">
