--- a/0_search/index.html
+++ b/0_search/index.html
@@ -9,8 +9,8 @@
         <div class="container">
             <div class="row">
                 <div class="d-flex flex-row justify-content-end">
-                    <div class="d-flex flex-column align-items-center"">
-                        <p>
+                    <div class="d-flex flex-row"">
+                        <p class="mx-3">
                             <a href="imageSearch.html">Image Search</a>
                         </p>
                         <p>
@@ -23,8 +23,9 @@
         <div class="container">
             <div class="row">
                 <div class="col d-flex flex-column flex-fill">
-                    <h1>Google</h1>
-                    <form action="https://google.com/search">
+                    <div class="d-flex justify-content-center">
+                        <img class="google-search-icon"src="./google.png" alt="">
+                    </div>                    <form action="https://google.com/search">
                         <div class="d-flex justify-content-center">
                             <input type="text" name="q"  class="search-engine w-100">
                         </div>
